tests/baselines/reference/baseUrlMigrationExample.errors.txt
/before/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== /before/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": "./src",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
            "paths": {
                "@app/*": ["app/*"],
                "@lib/*": ["lib/*"]
            }
        }
    }
    
==== /before/src/app/module.ts (0 errors) ====
    export const value = 42;
    
==== /before/src/lib/utils.ts (0 errors) ====
    export function helper() { return "help"; }
    
==== /before/src/main.ts (0 errors) ====
    import { value } from "@app/module";
    import { helper } from "@lib/utils";
    // This would also resolve due to baseUrl:
    import * as something from "someModule"; // Resolves to ./src/someModule
    
==== /before/src/someModule.ts (0 errors) ====
    export const data = "from baseUrl resolution";
    
==== /after/tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "paths": {
                // Explicit prefix for all path mappings
                "@app/*": ["./src/app/*"],
                "@lib/*": ["./src/lib/*"],
                // Optional: preserve baseUrl behavior with catch-all
                "*": ["./src/*"]
            }
        }
    }
    
==== /after/src/app/module.ts (0 errors) ====
    export const value = 42;
    
==== /after/src/lib/utils.ts (0 errors) ====
    export function helper() { return "help"; }
    
==== /after/src/main.ts (0 errors) ====
    import { value } from "@app/module";
    import { helper } from "@lib/utils";
    // With explicit catch-all mapping, this still works:
    import * as something from "someModule"; // Resolves to ./src/someModule
    
==== /after/src/someModule.ts (0 errors) ====
    export const data = "from explicit path mapping";